  shutdown.

* InputRunner and router's `Inject` methods each now return an error that can
  be checked to verify successful message injection.

* Added `SplitStreamNullSplitterToEOF` to SplitterRunner interface so input
  plugins can avoid generating messages with whatever happens to come back from
  a `Read()` call.

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

Bug Handling
------------

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

* Fixed ProcessInput hangs when splitter is defined (#1620, #1644).

* `heka.all-report` and `heka.memstat` messages are now protobuf encoded before
  being injected into the router (#1659).

* Fixed ProcessInput not getting process's full output when NullSplitter is in
  use (#1645).

0.10.0b0 (2015-07-13)
=====================

Backwards Incompatibilities
---------------------------

* Major overhaul of filter and output plugin APIs to support disk buffering
  (#1378).

* Go 1.4 now required for building.

* Deprecated the read_next_field() sandbox API; it is targeted for removal in
  0.11.0 (#1602).

* Removed unused PipelinePack.Decoded attribute.

* LogOutput will write data to stdout instead of stderr (#1515).

* Using strftime literals for filenames during rotation in FileOutput plugin
  (#1469).

* Implemented strftime format codes in: filenames in FileOutput plugin,
  ESJsonEncoder, ESLogstashV0Encoder, Payload encoder (#1469, #1508).

* The package created by 'make deb' creates an "heka" user and ships an init
  script and a systemd unit.

* The 'make deb' target requires fakeroot and debhelper to be installed.

* SplitterRunner interface now provides a `Done` method that should be called
  whenever the splitter is no longer needed.

* `"Fields"` choice for the `fields` setting renamed to `"DynamicFields"` for
  both ESJsonEncoder and ESLogstashV0Encoder.

Features
--------

* Added support for `write_message` to delete fields when passed nil values.
