@@ -1,0 +1,13 @@
+.. _json_decoder:
+
+JSON Decoder
+============
+
+.. versionadded:: 0.10
+
+| Plugin Name: **SandboxDecoder**
+| File Name: **lua_decoders/json.lua**
+
+.. include:: /../../sandbox/lua/decoders/json.lua
+   :start-after: --[[
+   :end-before: --]]
